--- a/Jungnami/Jungnami/SJ/Storyboard/Base.lproj/Main.storyboard
+++ b/Jungnami/Jungnami/SJ/Storyboard/Base.lproj/Main.storyboard
@@ -140,7 +140,7 @@
                         </view>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="CommunityTVCell" rowHeight="430" id="7cg-2K-n5B" customClass="CommunityTVCell" customModule="Jungnami" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="142" width="375" height="430"/>
+                                <rect key="frame" x="0.0" y="141.5" width="375" height="430"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="7cg-2K-n5B" id="0vV-lf-mHk">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="430"/>
@@ -353,30 +353,56 @@
                                 <rect key="frame" x="0.0" y="64" width="375" height="42"/>
                                 <subviews>
                                     <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dfV-fn-QfD">
-                                        <rect key="frame" x="257" y="6" width="30" height="30"/>
+                                        <rect key="frame" x="187.5" y="0.0" width="187.5" height="42"/>
                                         <state key="normal" title="지역">
-                                            <color key="titleColor" red="0.84705882352941175" green="0.84705882352941175" blue="0.84705882352941175" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <color key="titleColor" red="0.84705882349999995" green="0.84705882349999995" blue="0.84705882349999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
                                         <connections>
                                             <action selector="switchView:" destination="l0P-RT-O8r" eventType="touchUpInside" id="W54-pa-BOP"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VEO-Iy-Sro">
-                                        <rect key="frame" x="104" y="6" width="30" height="30"/>
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VEO-Iy-Sro">
+                                        <rect key="frame" x="1" y="0.0" width="187.5" height="42"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="187.5" id="rAL-oW-FTh"/>
+                                        </constraints>
                                         <state key="normal" title="정당">
-                                            <color key="titleColor" red="0.21176470589999999" green="0.7725490196" blue="0.94509803920000002" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleColor" red="0.21176470589999999" green="0.7725490196" blue="0.94509803920000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
                                         <connections>
                                             <action selector="switchView:" destination="l0P-RT-O8r" eventType="touchUpInside" id="jDD-D4-PcL"/>
                                         </connections>
                                     </button>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2o3-ua-jWp">
+                                        <rect key="frame" x="52" y="39" width="84" height="3"/>
+                                        <color key="backgroundColor" red="0.21176470589999999" green="0.7725490196" blue="0.94509803920000002" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="84" id="0bp-Tn-3a9"/>
+                                            <constraint firstAttribute="height" constant="3" id="xx3-u2-4If"/>
+                                        </constraints>
+                                    </view>
+                                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MKw-o4-eRa">
+                                        <rect key="frame" x="239.5" y="39" width="84" height="3"/>
+                                        <color key="backgroundColor" red="0.21176470588235294" green="0.77254901960784317" blue="0.94509803921568625" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="3" id="DNf-kW-lvM"/>
+                                            <constraint firstAttribute="width" constant="84" id="DnO-z4-v8i"/>
+                                        </constraints>
+                                    </view>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstItem="VEO-Iy-Sro" firstAttribute="leading" secondItem="bTT-BB-xda" secondAttribute="leading" constant="104" id="8mu-IZ-Bty"/>
-                                    <constraint firstItem="VEO-Iy-Sro" firstAttribute="centerY" secondItem="bTT-BB-xda" secondAttribute="centerY" id="E97-pD-WZi"/>
-                                    <constraint firstItem="dfV-fn-QfD" firstAttribute="centerY" secondItem="VEO-Iy-Sro" secondAttribute="centerY" id="IX5-fJ-hJ7"/>
-                                    <constraint firstItem="dfV-fn-QfD" firstAttribute="leading" secondItem="VEO-Iy-Sro" secondAttribute="trailing" constant="123" id="md9-CM-14h"/>
+                                    <constraint firstAttribute="bottom" secondItem="VEO-Iy-Sro" secondAttribute="bottom" id="1Jn-Ni-eDQ"/>
+                                    <constraint firstAttribute="bottom" secondItem="2o3-ua-jWp" secondAttribute="bottom" id="1tD-eW-vet"/>
+                                    <constraint firstItem="dfV-fn-QfD" firstAttribute="top" secondItem="bTT-BB-xda" secondAttribute="top" id="8h9-Pb-T6l"/>
+                                    <constraint firstItem="VEO-Iy-Sro" firstAttribute="top" secondItem="bTT-BB-xda" secondAttribute="top" id="8k6-kS-sKG"/>
+                                    <constraint firstAttribute="bottom" secondItem="dfV-fn-QfD" secondAttribute="bottom" id="9Dq-pJ-lIp"/>
+                                    <constraint firstItem="MKw-o4-eRa" firstAttribute="centerX" secondItem="dfV-fn-QfD" secondAttribute="centerX" id="Cpt-Ll-WeN"/>
+                                    <constraint firstAttribute="trailing" secondItem="dfV-fn-QfD" secondAttribute="trailing" id="FC0-4M-jtz"/>
+                                    <constraint firstItem="dfV-fn-QfD" firstAttribute="leading" secondItem="VEO-Iy-Sro" secondAttribute="trailing" id="KTz-Ib-NWK"/>
+                                    <constraint firstAttribute="bottom" secondItem="MKw-o4-eRa" secondAttribute="bottom" id="NvS-Q6-0bT"/>
+                                    <constraint firstItem="VEO-Iy-Sro" firstAttribute="leading" secondItem="bTT-BB-xda" secondAttribute="leading" id="ZIV-ju-Syi"/>
+                                    <constraint firstItem="2o3-ua-jWp" firstAttribute="centerX" secondItem="VEO-Iy-Sro" secondAttribute="centerX" id="oBK-UN-pa3"/>
                                     <constraint firstAttribute="height" constant="42" id="t3y-1h-4O6"/>
                                 </constraints>
                             </view>
@@ -395,7 +421,11 @@
                     </view>
                     <navigationItem key="navigationItem" id="xLK-rX-nyd"/>
                     <connections>
-                        <outlet property="containerView" destination="wXz-5M-Pih" id="n09-3K-rkA"/>
+                        <outlet property="containerView" destination="wXz-5M-Pih" id="NFn-Si-w5m"/>
+                        <outlet property="partyBtn" destination="VEO-Iy-Sro" id="hse-md-GJP"/>
+                        <outlet property="partyLine" destination="2o3-ua-jWp" id="ci9-11-wkS"/>
+                        <outlet property="regionBtn" destination="dfV-fn-QfD" id="Jtt-hz-8uY"/>
+                        <outlet property="regionLine" destination="MKw-o4-eRa" id="LCL-yj-2od"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jGe-AB-OyO" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -762,7 +792,7 @@
                         </view>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="SearchLegislatorResultTVCell" rowHeight="75" id="AF8-sR-6BO" customClass="SearchLegislatorResultTVCell" customModule="Jungnami" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="75" width="375" height="75"/>
+                                <rect key="frame" x="0.0" y="74.5" width="375" height="75"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="AF8-sR-6BO" id="d5u-fC-che">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="75"/>
@@ -1394,7 +1424,7 @@
                         </view>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CommunityTVCell" rowHeight="430" id="BRk-u1-pkw" customClass="CommunityTVCell" customModule="Jungnami" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="75" width="375" height="430"/>
+                                <rect key="frame" x="0.0" y="74.5" width="375" height="430"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="BRk-u1-pkw" id="2hL-Oq-UI3">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="430"/>
