--- a/Jungnami/Jungnami/SJ/Storyboard/Base.lproj/Main.storyboard
+++ b/Jungnami/Jungnami/SJ/Storyboard/Base.lproj/Main.storyboard
@@ -585,20 +585,88 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <containerView opaque="NO" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="s3x-N1-ThG">
-                                <rect key="frame" x="0.0" y="95" width="375" height="572"/>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="s3x-N1-ThG">
+                                <rect key="frame" x="0.0" y="62" width="375" height="605"/>
                             </containerView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="o2f-ps-b6g">
+                                <rect key="frame" x="0.0" y="20" width="375" height="42"/>
+                                <subviews>
+                                    <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q2U-eo-vWL">
+                                        <rect key="frame" x="187.5" y="0.0" width="187.5" height="42"/>
+                                        <state key="normal" title="비호감">
+                                            <color key="titleColor" red="0.84705882349999995" green="0.84705882349999995" blue="0.84705882349999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="switchView:" destination="fTr-ar-wsT" eventType="touchUpInside" id="ZyP-zs-KY3"/>
+                                            <action selector="switchView:" destination="l0P-RT-O8r" eventType="touchUpInside" id="eWO-Nq-MKk"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NC1-7f-lzM">
+                                        <rect key="frame" x="0.0" y="0.0" width="187.5" height="42"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="187.5" id="REb-XQ-mRr"/>
+                                        </constraints>
+                                        <state key="normal" title="호감">
+                                            <color key="titleColor" red="0.21176470589999999" green="0.7725490196" blue="0.94509803920000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="switchView:" destination="fTr-ar-wsT" eventType="touchUpInside" id="N0i-a7-geB"/>
+                                            <action selector="switchView:" destination="l0P-RT-O8r" eventType="touchUpInside" id="RJU-Jf-cxb"/>
+                                        </connections>
+                                    </button>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iHu-1U-gBF">
+                                        <rect key="frame" x="51" y="39" width="84" height="3"/>
+                                        <color key="backgroundColor" red="0.21176470589999999" green="0.7725490196" blue="0.94509803920000002" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="3" id="EhV-0O-FyC"/>
+                                            <constraint firstAttribute="width" constant="84" id="L07-LI-ntZ"/>
+                                        </constraints>
+                                    </view>
+                                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TDi-gK-FoF">
+                                        <rect key="frame" x="239.5" y="39" width="84" height="3"/>
+                                        <color key="backgroundColor" red="0.21176470589999999" green="0.7725490196" blue="0.94509803920000002" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="84" id="05j-w5-Snp"/>
+                                            <constraint firstAttribute="height" constant="3" id="ubf-bE-AeV"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="NC1-7f-lzM" secondAttribute="bottom" id="1Tk-rD-Wgx"/>
+                                    <constraint firstItem="TDi-gK-FoF" firstAttribute="centerX" secondItem="q2U-eo-vWL" secondAttribute="centerX" id="1gY-10-HSF"/>
+                                    <constraint firstAttribute="bottom" secondItem="q2U-eo-vWL" secondAttribute="bottom" id="3Gp-UN-6pA"/>
+                                    <constraint firstItem="q2U-eo-vWL" firstAttribute="leading" secondItem="NC1-7f-lzM" secondAttribute="trailing" id="43p-gf-sw5"/>
+                                    <constraint firstItem="NC1-7f-lzM" firstAttribute="top" secondItem="o2f-ps-b6g" secondAttribute="top" id="5ZX-RW-VzI"/>
+                                    <constraint firstAttribute="bottom" secondItem="TDi-gK-FoF" secondAttribute="bottom" id="ArS-Ne-aKy"/>
+                                    <constraint firstAttribute="bottom" secondItem="iHu-1U-gBF" secondAttribute="bottom" id="Hz3-Oi-vqx"/>
+                                    <constraint firstAttribute="trailing" secondItem="q2U-eo-vWL" secondAttribute="trailing" id="Y19-qM-0la"/>
+                                    <constraint firstItem="q2U-eo-vWL" firstAttribute="top" secondItem="o2f-ps-b6g" secondAttribute="top" id="ivc-tV-GNC"/>
+                                    <constraint firstItem="iHu-1U-gBF" firstAttribute="centerX" secondItem="NC1-7f-lzM" secondAttribute="centerX" id="jxN-iN-v7r"/>
+                                    <constraint firstAttribute="height" constant="42" id="rOd-HU-SPr"/>
+                                    <constraint firstItem="NC1-7f-lzM" firstAttribute="leading" secondItem="o2f-ps-b6g" secondAttribute="leading" id="zVu-s1-34P"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="o2f-ps-b6g" firstAttribute="trailing" secondItem="sXd-Ds-JS5" secondAttribute="trailing" id="33d-gJ-G5p"/>
+                            <constraint firstItem="s3x-N1-ThG" firstAttribute="top" secondItem="o2f-ps-b6g" secondAttribute="bottom" id="ALc-G8-KHM"/>
                             <constraint firstItem="sXd-Ds-JS5" firstAttribute="bottom" secondItem="s3x-N1-ThG" secondAttribute="bottom" id="Pgv-h8-O9R"/>
+                            <constraint firstItem="s3x-N1-ThG" firstAttribute="bottom" secondItem="sXd-Ds-JS5" secondAttribute="bottom" id="QqL-hL-t6a"/>
+                            <constraint firstItem="o2f-ps-b6g" firstAttribute="top" secondItem="sXd-Ds-JS5" secondAttribute="top" id="VdJ-Px-avc"/>
                             <constraint firstItem="sXd-Ds-JS5" firstAttribute="trailing" secondItem="s3x-N1-ThG" secondAttribute="trailing" id="iAi-RZ-faj"/>
+                            <constraint firstItem="o2f-ps-b6g" firstAttribute="leading" secondItem="sXd-Ds-JS5" secondAttribute="leading" id="mug-mB-BTn"/>
                             <constraint firstItem="s3x-N1-ThG" firstAttribute="leading" secondItem="sXd-Ds-JS5" secondAttribute="leading" id="sbn-Bs-pYI"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="sXd-Ds-JS5"/>
                     </view>
                     <connections>
                         <outlet property="containerView" destination="s3x-N1-ThG" id="1s7-tp-nir"/>
+                        <outlet property="dislikeBtn" destination="q2U-eo-vWL" id="wD2-fJ-Hqc"/>
+                        <outlet property="dislikeLine" destination="TDi-gK-FoF" id="CEL-G7-yUg"/>
+                        <outlet property="likeBtn" destination="NC1-7f-lzM" id="EJP-fK-gnS"/>
+                        <outlet property="likeLine" destination="iHu-1U-gBF" id="UiJ-2i-sSD"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XIu-Np-fac" userLabel="First Responder" sceneMemberID="firstResponder"/>
