--- a/Jungnami/Jungnami/SJ/Storyboard/Base.lproj/Main.storyboard
+++ b/Jungnami/Jungnami/SJ/Storyboard/Base.lproj/Main.storyboard
@@ -1831,21 +1831,91 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bjz-0a-6bH">
-                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bjz-0a-6bH">
+                                <rect key="frame" x="0.0" y="106" width="375" height="512"/>
                             </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7xZ-CB-BoB">
+                                <rect key="frame" x="0.0" y="64" width="375" height="42"/>
+                                <subviews>
+                                    <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mtL-pz-qFe">
+                                        <rect key="frame" x="187.5" y="0.0" width="187.5" height="42"/>
+                                        <state key="normal" title="비호감">
+                                            <color key="titleColor" red="0.84705882349999995" green="0.84705882349999995" blue="0.84705882349999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="switchView:" destination="fTr-ar-wsT" eventType="touchUpInside" id="QAz-2X-x4M"/>
+                                            <action selector="switchView:" destination="QYo-R0-gTS" eventType="touchUpInside" id="wfH-A6-z8I"/>
+                                            <action selector="switchView:" destination="l0P-RT-O8r" eventType="touchUpInside" id="xPN-Ik-JN0"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ln1-Os-c53">
+                                        <rect key="frame" x="0.0" y="0.0" width="187.5" height="42"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="187.5" id="uTp-Q4-Q1H"/>
+                                        </constraints>
+                                        <state key="normal" title="호감">
+                                            <color key="titleColor" red="0.21176470589999999" green="0.7725490196" blue="0.94509803920000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="switchView:" destination="fTr-ar-wsT" eventType="touchUpInside" id="Brv-ru-ARO"/>
+                                            <action selector="switchView:" destination="QYo-R0-gTS" eventType="touchUpInside" id="LbQ-Ry-3b3"/>
+                                            <action selector="switchView:" destination="l0P-RT-O8r" eventType="touchUpInside" id="Wsh-GC-oiR"/>
+                                        </connections>
+                                    </button>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="avp-mt-wai">
+                                        <rect key="frame" x="51" y="39" width="84" height="3"/>
+                                        <color key="backgroundColor" red="0.21176470589999999" green="0.7725490196" blue="0.94509803920000002" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="3" id="NKd-22-4ZA"/>
+                                            <constraint firstAttribute="width" constant="84" id="uOf-ng-cp6"/>
+                                        </constraints>
+                                    </view>
+                                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9Af-IF-afW">
+                                        <rect key="frame" x="239.5" y="39" width="84" height="3"/>
+                                        <color key="backgroundColor" red="0.21176470589999999" green="0.7725490196" blue="0.94509803920000002" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="84" id="P8v-4e-dsi"/>
+                                            <constraint firstAttribute="height" constant="3" id="YWt-VD-0iH"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="mtL-pz-qFe" firstAttribute="leading" secondItem="ln1-Os-c53" secondAttribute="trailing" id="8PM-kU-YAW"/>
+                                    <constraint firstAttribute="bottom" secondItem="9Af-IF-afW" secondAttribute="bottom" id="9dP-T8-sUw"/>
+                                    <constraint firstItem="avp-mt-wai" firstAttribute="centerX" secondItem="ln1-Os-c53" secondAttribute="centerX" id="Lnf-oh-pH6"/>
+                                    <constraint firstItem="ln1-Os-c53" firstAttribute="leading" secondItem="7xZ-CB-BoB" secondAttribute="leading" id="RNX-SY-Mih"/>
+                                    <constraint firstAttribute="bottom" secondItem="ln1-Os-c53" secondAttribute="bottom" id="WrX-zf-Nwf"/>
+                                    <constraint firstAttribute="trailing" secondItem="mtL-pz-qFe" secondAttribute="trailing" id="Y0v-6z-noA"/>
+                                    <constraint firstAttribute="bottom" secondItem="avp-mt-wai" secondAttribute="bottom" id="Yjq-CU-G4Y"/>
+                                    <constraint firstItem="mtL-pz-qFe" firstAttribute="top" secondItem="7xZ-CB-BoB" secondAttribute="top" id="gTS-lE-XRp"/>
+                                    <constraint firstItem="ln1-Os-c53" firstAttribute="top" secondItem="7xZ-CB-BoB" secondAttribute="top" id="n7C-uw-BO3"/>
+                                    <constraint firstAttribute="bottom" secondItem="mtL-pz-qFe" secondAttribute="bottom" id="nyQ-TU-gy4"/>
+                                    <constraint firstAttribute="height" constant="42" id="ql9-S5-AqA"/>
+                                    <constraint firstItem="9Af-IF-afW" firstAttribute="centerX" secondItem="mtL-pz-qFe" secondAttribute="centerX" id="ugZ-zh-OR7"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="QWc-dK-N9j" firstAttribute="trailing" secondItem="bjz-0a-6bH" secondAttribute="trailing" id="0PM-Jd-BHh"/>
+                            <constraint firstItem="7xZ-CB-BoB" firstAttribute="leading" secondItem="Svq-xy-3DC" secondAttribute="leading" id="SKi-li-M8w"/>
+                            <constraint firstItem="7xZ-CB-BoB" firstAttribute="top" secondItem="QWc-dK-N9j" secondAttribute="top" id="dI5-vi-fnC"/>
+                            <constraint firstItem="bjz-0a-6bH" firstAttribute="bottom" secondItem="QWc-dK-N9j" secondAttribute="bottom" id="k7B-7e-gNp"/>
+                            <constraint firstItem="bjz-0a-6bH" firstAttribute="top" secondItem="7xZ-CB-BoB" secondAttribute="bottom" id="kJM-xt-AVO"/>
                             <constraint firstItem="bjz-0a-6bH" firstAttribute="leading" secondItem="QWc-dK-N9j" secondAttribute="leading" id="snK-ws-fFs"/>
                             <constraint firstItem="QWc-dK-N9j" firstAttribute="bottom" secondItem="bjz-0a-6bH" secondAttribute="bottom" id="whR-qL-dJi"/>
+                            <constraint firstItem="QWc-dK-N9j" firstAttribute="trailing" secondItem="7xZ-CB-BoB" secondAttribute="trailing" id="ykc-RX-5XH"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="QWc-dK-N9j"/>
                     </view>
                     <navigationItem key="navigationItem" id="Zvk-Aj-5ap"/>
                     <connections>
                         <outlet property="containerView" destination="bjz-0a-6bH" id="ymC-zX-H7h"/>
+                        <outlet property="dislikeBtn" destination="mtL-pz-qFe" id="FT5-Qb-Em3"/>
+                        <outlet property="dislikeLine" destination="9Af-IF-afW" id="hZm-hL-kfk"/>
+                        <outlet property="likeBtn" destination="ln1-Os-c53" id="9zz-2c-pKn"/>
+                        <outlet property="likeLine" destination="avp-mt-wai" id="ohk-fq-zlG"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7nG-HP-V6P" userLabel="First Responder" sceneMemberID="firstResponder"/>
